--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,13 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{g4,java}]
+indent_size = 4
+tab_width = unset
+indent_style = tab
+insert_final_newline = false
+trim_trailing_whitespace = false
+
 [*.txt]
 insert_final_newline = false
 trim_trailing_whitespace = false
