--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^20.12.7",
     "antlr4ts-cli": "^0.5.0-alpha.4",
     "rimraf": "^5.0.5",
-    "tsx": "^4.7.2"
+    "tsx": "^4.7.2",
+    "typescript": "^5.4.5"
   }
 }
