--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "@o7d/syntax",
   "scripts": {
-    "generate": "rimraf generated && antlr4ts -visitor -o ./generated ./o7d.g4"
+    "generate": "rimraf generated && antlr4ts -visitor -o ./generated ./o7dLexer.g4 && antlr4ts -visitor -o ./generated ./o7dParser.g4"
   },
   "dependencies": {
     "antlr4ts": "^0.5.0-alpha.4"
